- Fixed: [#2437] error at /lands unclaim all
- Fixed: Land storage item grouping at save