@@ -1,2 +1,8 @@
-- Fixed: [#2437] error at /lands unclaim all
-- Fixed: Land storage item grouping at save
++ Added: You can now specify flags to be toggleable for the tenant role (roles.yml)
+      # Allow lands to toggle specific flags for this role? They can only do this while the area is NOT rented.
+      # WARNING: Keep in mind that this could allow lands to rent out areas, in which tenants can't do much or nothing depending
+      # on the "allow-edit" list. You can add "all" to the list to allow them to toggle all flags for this role.
+      # NOTE: They still need the generl toggle permission for the flags. These can be found in the wiki: https://github.com/Angeschossen/Lands/wiki/Permissions#toggle-role-flags
+      allow-toggle-flags: []
+
+- Fixed: [#2240] assinging areas for a admin land
